# gdigicam

./: AUTHORS  COPYING  ChangeLog  Makefile.am  autogen.sh  build.sh  configure.ac  gdigicam.pc.in
debian/: changelog  control  copyright  gdigicam-examples.install  libgdigicam-dev.install.in  libgdigicam-doc.install.in  libgdigicam-gst-camerabin-dev.install.in  libgdigicam-gst-camerabin-doc.install.in  libgdigicam-gst-camerabin0.install.in  libgdigicam0.install.in  libgdigicam_gst_camerabin_tests_launcher  libgdigicam_tests_launcher  rules
doc/: Makefile.am
doc/reference/: Makefile.am  gdigicam-docs.sgml  gdigicam-sections.txt
doc/reference/gst-camerabin/: Makefile.am  gdigicam-gst-camerabin-docs.sgml  gdigicam-gst-camerabin-sections.txt  version.xml.in
examples/: Makefile.am  README  gdigicam_manager_test_app.c
ext/: Makefile.am
ext/gst-camerabin/: Makefile.am  gdigicam-camerabin.c  gdigicam-camerabin.h  gdigicam-gst-camerabin.pc.in
ext/gst-camerabin/data/: Makefile.am  gdigicam-camerabin.conf
src/: Makefile.am  gdigicam-debug.h  gdigicam-error.c  gdigicam-error.h  gdigicam-manager-private.h  gdigicam-manager.c  gdigicam-manager.h  gdigicam-util.c  gdigicam-util.h  gdigicam-version.h.in  gdigicam.h
tests/: Makefile.am  TEST-CASES.txt  check-gdigicam-manager.c  check-utils.c  check-utils.h  check_test.c  test_suites.h
tests/gst-camerabin/: Makefile.am  TEST-CASES.txt  check-gdigicam-camerabin.c  check-utils.c  check-utils.h  check_test.c  test_suites.h
